--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,11 @@
 {
   "presets": [
-    "es2015",
-    "react",
-    "stage-0"
+    "env",
+    "react"
   ],
   "plugins": [
     "transform-runtime",
     "transform-regenerator",
-    "transform-undefined-to-void",
     "transform-decorators-legacy",
     "external-helpers",
     "add-module-exports"
