--- a/package.json
+++ b/package.json
@@ -1,53 +1,45 @@
 {
-  "name": "ekbc-datagrid",
-  "version": "3.0.8",
+  "name": "react-simple-table",
+  "version": "1.0.0",
   "author": "nanyuantingfeng",
   "description": "simple table base on antd",
   "main": "./lib/index.js",
-
   "scripts": {
     "dev": "hollow dev -p 9978",
-    "build": "mkdir -p lib && babel ./src -d ./lib && mkdir -p build && cp -R package.json README.md src lib styles build",
-    "publish2npm": "mkdir -p build && cp -R package.json README.md src lib styles build && npm publish ./build",
-    "clean": "rm -rf ./lib ./build",
+    "publish2npm": "npm publish",
+    "clean": "rm -rf ./lib",
     "test": "jest"
   },
-
-  "license": "NO LICENSE",
+  "license": "MIT",
   "devDependencies": {
-    "antd": "^2.13.1",
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^21.0.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-external-helpers-2": "^6.3.13",
-    "babel-plugin-import": "^1.4.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-undefined-to-void": "^6.8.3",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "antd": "^3.6.3",
+    "babel-plugin-import": "^1.8.0",
     "faker": "^4.1.0",
-    "hollow-cli": "^0.6.8",
-    "jest": "^21.0.2",
-    "react-test-renderer": "^15.6.1"
+    "hollow-cli": "^1.0.0-beta.11",
+    "jest": "^23.1.0",
+    "react-test-renderer": "^16.4.1"
   },
   "dependencies": {
     "clone": "^2.1.1",
     "deep-equal": "latest",
     "message-center.js": "^2.0.2",
-    "moment": "^2.18.1",
+    "moment": "^2.22.2",
     "number-format.js": "^1.1.11",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-highlight-words": "^0.8.1"
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-highlight-words": "^0.11.0"
   },
-  "entry": {
-    "index": "./example/entry.js",
-    "index1": "./example/entry1.js",
-    "index2": "./example/entry2.js"
-  }
+  "directories": {
+    "example": "example",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nanyuantingfeng/react-simple-table.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nanyuantingfeng/react-simple-table/issues"
+  },
+  "homepage": "https://github.com/nanyuantingfeng/react-simple-table#readme"
 }
