--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,8 @@
     "transform-regenerator",
     "transform-decorators-legacy",
     "external-helpers",
-    "add-module-exports"
+    "add-module-exports",
+    "transform-object-rest-spread",
+    "transform-class-properties"
   ]
 }
